Updated app logic for better memory management