@@ -4,6 +4,7 @@ import com.example.backendapp.cache.AiResponseCache;
 import com.example.backendapp.config.GeminiConfig;
 import com.example.backendapp.exception.AIProcessingException;
 import com.example.backendapp.util.GeminiResponseUtil;
+import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
@@ -19,6 +20,7 @@ import reactor.core.scheduler.Schedulers;
 import reactor.util.function.Tuple3;
 import reactor.util.function.Tuples;
 
+import java.io.StringWriter;
 import java.time.Duration;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -47,71 +49,77 @@ public class AiExcelToJsonService {
     }
 
     public Mono<Object> enhance(Map<String, List<Map<String, Object>>> workbookData) {
-        return Mono.fromCallable(() -> objectMapper.writeValueAsString(workbookData))
-                .subscribeOn(Schedulers.boundedElastic())
-                .flatMap(rawJson -> {
-                    if (rawJson.length() > MAX_INPUT_LENGTH * 10) {
-                        log.warn("Input JSON too large even for chunked Gemini processing.");
-                        return Mono.error(new AIProcessingException("Excel data is too large for AI chunked processing."));
-                    }
+        return Mono.fromCallable(() -> {
+            StringWriter writer = new StringWriter();
+            try (JsonGenerator gen = objectMapper.getFactory().createGenerator(writer)) {
+                objectMapper.writeValue(gen, workbookData);
+            }
+            return writer.toString();
+        }).subscribeOn(Schedulers.boundedElastic()).flatMap(rawJson -> {
 
-                    String cached = aiResponseCache.getCachedResponse(rawJson);
-                    if (cached != null) {
-                        return Mono.fromCallable(() -> objectMapper.readValue(cached, Object.class))
-                                .subscribeOn(Schedulers.boundedElastic())
-                                .onErrorResume(e -> {
-                                    log.warn("Failed to deserialize cached AI response. Will reprocess.", e);
-                                    return Mono.empty();
-                                });
-                    }
+            if (rawJson.length() > MAX_INPUT_LENGTH * 10) {
+                return Mono.error(new AIProcessingException("Excel data is too large for AI chunked processing."));
+            }
 
-                    List<Mono<Tuple3<String, Integer, List<Map<String, Object>>>>> chunkMonos = new ArrayList<>();
+            // Check cache
+            String cached = aiResponseCache.getCachedResponse(rawJson);
+            if (cached != null) {
+                return Mono.fromCallable(() -> objectMapper.readValue(cached, Object.class))
+                        .subscribeOn(Schedulers.boundedElastic())
+                        .onErrorResume(e -> {
+                            log.warn("Failed to deserialize cached response, regenerating.");
+                            return Mono.empty();
+                        });
+            }
 
-                    for (Map.Entry<String, List<Map<String, Object>>> entry : workbookData.entrySet()) {
-                        String sheetName = entry.getKey();
-                        List<Map<String, Object>> rows = entry.getValue();
+            // Generate chunks
+            List<Mono<Tuple3<String, Integer, List<Map<String, Object>>>>> chunkMonos = new ArrayList<>();
 
-                        List<List<Map<String, Object>>> chunks = IntStream.range(0, (rows.size() + CHUNK_SIZE - 1) / CHUNK_SIZE)
-                                .mapToObj(i -> rows.subList(i * CHUNK_SIZE, Math.min(rows.size(), (i + 1) * CHUNK_SIZE)))
-                                .toList();
+            workbookData.forEach((sheetName, rows) -> {
+                List<List<Map<String, Object>>> chunks = IntStream.range(0, (rows.size() + CHUNK_SIZE - 1) / CHUNK_SIZE)
+                        .mapToObj(i -> rows.subList(i * CHUNK_SIZE, Math.min(rows.size(), (i + 1) * CHUNK_SIZE)))
+                        .toList();
 
-                        for (int i = 0; i < chunks.size(); i++) {
-                            List<Map<String, Object>> chunk = chunks.get(i);
-                            chunkMonos.add(enhanceChunk(sheetName, i, chunk));
-                        }
-                    }
+                for (int i = 0; i < chunks.size(); i++) {
+                    chunkMonos.add(enhanceChunk(sheetName, i, chunks.get(i)));
+                }
+            });
 
-                    return Flux.merge(chunkMonos)
-                            .collectList()
-                            .flatMap(results -> {
-                                Map<String, List<Tuple3<String, Integer, List<Map<String, Object>>>>> chunkGroups = new HashMap<>();
-                                for (Tuple3<String, Integer, List<Map<String, Object>>> tuple : results) {
-                                    chunkGroups.computeIfAbsent(tuple.getT1(), k -> new ArrayList<>()).add(tuple);
-                                }
+            return Flux.concat(chunkMonos)
+                    .collectList()
+                    .flatMap(results -> {
+                        Map<String, List<Map<String, Object>>> enhancedWorkbook = new LinkedHashMap<>();
+                        Map<String, List<Tuple3<String, Integer, List<Map<String, Object>>>>> grouped =
+                                results.stream().collect(Collectors.groupingBy(Tuple3::getT1));
 
-                                Map<String, List<Map<String, Object>>> finalResult = new LinkedHashMap<>();
-                                for (String sheetName : workbookData.keySet()) {
-                                    List<Tuple3<String, Integer, List<Map<String, Object>>>> sheetChunks = chunkGroups.get(sheetName);
-                                    if (sheetChunks == null) continue;
-
-                                    List<Map<String, Object>> orderedRows = sheetChunks.stream()
+                        for (String sheetName : workbookData.keySet()) {
+                            List<Tuple3<String, Integer, List<Map<String, Object>>>> orderedChunks =
+                                    grouped.getOrDefault(sheetName, List.of()).stream()
                                             .sorted(Comparator.comparing(Tuple3::getT2))
-                                            .flatMap(t -> t.getT3().stream())
-                                            .collect(Collectors.toList());
+                                            .toList();
 
-                                    finalResult.put(sheetName, orderedRows);
-                                }
+                            List<Map<String, Object>> orderedRows = orderedChunks.stream()
+                                    .flatMap(t -> t.getT3().stream())
+                                    .collect(Collectors.toList());
 
-                                return Mono.fromCallable(() -> objectMapper.writeValueAsString(finalResult))
-                                        .subscribeOn(Schedulers.boundedElastic())
-                                        .doOnNext(json -> aiResponseCache.cacheResponse(rawJson, json))
-                                        .thenReturn(finalResult);
-                            });
-                })
-                .onErrorResume(e -> {
-                    log.error("Chunked AI enhancement failed", e);
-                    return Mono.error(new AIProcessingException("Chunked AI enhancement failed: " + e.getMessage()));
-                });
+                            enhancedWorkbook.put(sheetName, orderedRows);
+                        }
+
+                        return Mono.fromCallable(() -> {
+                            StringWriter resultWriter = new StringWriter();
+                            try (JsonGenerator gen = objectMapper.getFactory().createGenerator(resultWriter)) {
+                                objectMapper.writeValue(gen, enhancedWorkbook);
+                            }
+                            String finalJson = resultWriter.toString();
+                            aiResponseCache.cacheResponse(rawJson, finalJson);
+                            return enhancedWorkbook;
+                        }).subscribeOn(Schedulers.boundedElastic());
+                    });
+
+        }).onErrorResume(e -> {
+            log.error("Chunked AI enhancement failed", e);
+            return Mono.error(new AIProcessingException("AI enhancement failed: " + e.getMessage()));
+        });
     }
 
     private Mono<Tuple3<String, Integer, List<Map<String, Object>>>> enhanceChunk(String sheetName, int chunkIndex, List<Map<String, Object>> chunk) {
@@ -119,17 +127,16 @@ public class AiExcelToJsonService {
                 .subscribeOn(Schedulers.boundedElastic())
                 .flatMap(chunkJson -> {
                     if (chunkJson.length() > MAX_INPUT_LENGTH) {
-                        log.warn("Chunk too large for Gemini ({} chars)", chunkJson.length());
                         return Mono.error(new AIProcessingException("A chunk is too large for Gemini."));
                     }
 
                     String prompt = """
-                            You are an AI assistant. The input is a part of an Excel workbook in JSON format.
-                            Standardize data types, clean the content, and preserve the structure.
-                            Return the result as pure JSON.
+                        You are an AI assistant. The input is a part of an Excel workbook in JSON format.
+                        Standardize data types, clean the content, and preserve the structure.
+                        Return the result as pure JSON.
 
-                            Input:
-                            """ + chunkJson;
+                        Input:
+                        """ + chunkJson;
 
                     return webClient.post()
                             .uri(uriBuilder -> uriBuilder
@@ -147,13 +154,11 @@ public class AiExcelToJsonService {
                                     return Mono.error(new AIProcessingException("Gemini returned empty response."));
                                 }
                                 return Mono.fromCallable(() -> {
-                                            Map<String, List<Map<String, Object>>> parsed =
-                                                    objectMapper.readValue(text, new TypeReference<>() {});
-                                            List<Map<String, Object>> enhancedRows =
-                                                    parsed.getOrDefault(sheetName, Collections.emptyList());
-                                            return Tuples.of(sheetName, chunkIndex, enhancedRows);
-                                        })
-                                        .subscribeOn(Schedulers.boundedElastic());
+                                    Map<String, List<Map<String, Object>>> parsed =
+                                            objectMapper.readValue(text, new TypeReference<>() {});
+                                    List<Map<String, Object>> enhancedRows = parsed.getOrDefault(sheetName, Collections.emptyList());
+                                    return Tuples.of(sheetName, chunkIndex, enhancedRows);
+                                }).subscribeOn(Schedulers.boundedElastic());
                             })
                             .onErrorResume(error -> {
                                 if (error instanceof WebClientResponseException ex) {
@@ -162,9 +167,8 @@ public class AiExcelToJsonService {
                                 }
                                 return Mono.error(error);
                             });
-                })
-                .onErrorResume(e -> {
-                    log.error("Failed to process chunk for sheet: {}", sheetName, e);
+                }).onErrorResume(e -> {
+                    log.error("Failed to process chunk (sheet={} chunkIndex={})", sheetName, chunkIndex, e);
                     return Mono.error(new AIProcessingException("Chunk processing error: " + e.getMessage()));
                 });
     }
